src/com/bpreece/lotr/Frodo.java
/* Generated By:JavaCC: Do not edit this line. Frodo.java */
package com.bpreece.lotr;

import java.io.BufferedReader;
import java.io.FileOutputStream;
import java.io.FileReader;
import java.io.IOException;
import java.io.InputStreamReader;
import java.io.PrintStream;
import java.io.Reader;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;

public class Frodo implements FrodoConstants {
    private static final Map<String, Object> defines = new HashMap<String, Object>();

    public static void main(String args[])
        throws ParseException
    {
        try {
            if (args.length < 1) {
                System.err.println("Usage:  frodo <script> [ <infile> [ <outfile> ] ]");
            }
            Frodo frodo = new Frodo(new FileReader(args[0]));

            Reader in = new InputStreamReader(System.in);
            if (args.length > 1) {
                in = new BufferedReader(new FileReader(args[1]));
            }

            PrintStream out = System.out;
            if (args.length > 2) {
                out = new PrintStream(new FileOutputStream(args[2]));
            }

            ASN.Script frodoScript = frodo.Script();
            LOTR lotr = new LOTR(readLines(in));
            frodoScript.execute(lotr);
            writeLines(out, lotr.getLines());
        } catch (IOException ex) {
            ex.printStackTrace();
        }
    }

    private static List<String> readLines(Reader in)
        throws IOException
    {
        List<String> lines = new ArrayList<String>();
        BufferedReader reader = new BufferedReader(in);
        String line = null;
        while ((line = reader.readLine()) != null) {
            lines.add(line);
        }
        return lines;
    }

    private static void writeLines(PrintStream out, List<String> lines) {
        for (String line : lines) {
            out.println(line);
        }
    }

    private static String unescape(String input) {
        input = input.substring(1, input.length()-1);
        StringBuilder buffer = new StringBuilder();
        for (int i = 0; i < input.length(); i++) {
            char c = input.charAt(i);
            if (c == '\u005c\u005c') {
                c = input.charAt(++i);
                switch (c) {
                case 't': buffer.append('\u005ct'); break;
                case 'b': buffer.append('\u005cb'); break;
                case 'f': buffer.append('\u005cf'); break;
                case 'r': buffer.append('\u005cr'); break;
                case 'n': buffer.append('\u005cn'); break;
                default:  buffer.append(c); break;
                }
            } else {
                buffer.append(c);
            }
        }
        return buffer.toString();
    }

    private static final HashMap<String, ASN.TConstant> definedValues =
        new HashMap<String, ASN.TConstant>();

    private static void define(String id, ASN.TConstant value) {
        definedValues.put(id, value);
    }

    private static ASN.TConstant lookup(String id)
        throws ParseException
    {
        if (definedValues.containsKey(id)) {
            return definedValues.get(id);
        } else {
            throw new ParseException("Undefined id " + id);
        }
    }

    private static ASN.TConstant lookup(String id, Class valueClass)
        throws ParseException
    {
        if (definedValues.containsKey(id)) {
            ASN.TConstant value = definedValues.get(id);
            if (value.getClass().equals(valueClass)) {
                return value;
            } else {
                throw new ParseException(id + value.getClass() + " != " + valueClass);
            }
        } else {
            throw new ParseException("Undefined id " + id);
        }
    }

    private final LOTR lotr = new LOTR(new ArrayList<String>());

    public Frodo() { }

  static final public ASN.Script Script() throws ParseException {
    ASN.Command command;
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      Definition();
    }
    command = Disjunction();
                             {if (true) return new ASN.Script(command);}
    throw new Error("Missing return statement in function");
  }

  static final public ASN.TConstant Literal() throws ParseException {
    Token t;
    if (jj_2_2(3)) {
      t = jj_consume_token(T_STRING);
                     {if (true) return new ASN.TString(unescape(token.image));}
    } else if (jj_2_3(3)) {
      t = jj_consume_token(T_REGEX);
                    {if (true) return new ASN.TRegex(unescape(token.image));}
    } else if (jj_2_4(3)) {
      t = jj_consume_token(T_FORMAT);
                     {if (true) return new ASN.TFormat(unescape(token.image));}
    } else if (jj_2_5(3)) {
      t = jj_consume_token(T_INTEGER);
                      {if (true) return new ASN.TInteger(Long.parseLong(token.image));}
    } else if (jj_2_6(3)) {
      t = jj_consume_token(T_FLOAT);
                    {if (true) return new ASN.TFloat(Double.parseDouble(token.image));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Definition() throws ParseException {
    Token id;
    ASN.TConstant constant;
    jj_consume_token(T_DEFINE);
    id = jj_consume_token(T_ID);
    constant = Literal();
                                                  define(id.image, constant);
  }

  static final public ASN.TConstant Constant() throws ParseException {
    Token t;
    if (jj_2_7(3)) {
      t = jj_consume_token(T_STRING);
                     {if (true) return new ASN.TString(unescape(t.image));}
    } else if (jj_2_8(3)) {
      t = jj_consume_token(T_REGEX);
                    {if (true) return new ASN.TRegex(unescape(t.image));}
    } else if (jj_2_9(3)) {
      t = jj_consume_token(T_FORMAT);
                     {if (true) return new ASN.TFormat(unescape(t.image));}
    } else if (jj_2_10(3)) {
      t = jj_consume_token(T_INTEGER);
                      {if (true) return new ASN.TInteger(Long.parseLong(t.image));}
    } else if (jj_2_11(3)) {
      t = jj_consume_token(T_FLOAT);
                    {if (true) return new ASN.TFloat(Double.parseDouble(t.image));}
    } else if (jj_2_12(3)) {
      t = jj_consume_token(T_ID);
                 {if (true) return lookup(t.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASN.TString String() throws ParseException {
    Token t;
    if (jj_2_13(3)) {
      t = jj_consume_token(T_STRING);
                     {if (true) return new ASN.TString(unescape(t.image));}
    } else if (jj_2_14(3)) {
      t = jj_consume_token(T_ID);
                 {if (true) return (ASN.TString)lookup(t.image, ASN.TString.class);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASN.TRegex Regex() throws ParseException {
    Token t;
    if (jj_2_15(3)) {
      t = jj_consume_token(T_REGEX);
                    {if (true) return new ASN.TRegex(unescape(t.image));}
    } else if (jj_2_16(3)) {
      t = jj_consume_token(T_ID);
                 {if (true) return (ASN.TRegex)lookup(t.image, ASN.TRegex.class);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASN.TFormat Format() throws ParseException {
    Token t;
    if (jj_2_17(3)) {
      t = jj_consume_token(T_FORMAT);
                     {if (true) return new ASN.TFormat(unescape(t.image));}
    } else if (jj_2_18(3)) {
      t = jj_consume_token(T_ID);
                 {if (true) return (ASN.TFormat)lookup(t.image, ASN.TFormat.class);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASN.TInteger Integer() throws ParseException {
    Token t;
    if (jj_2_19(3)) {
      t = jj_consume_token(T_INTEGER);
                      {if (true) return new ASN.TInteger(Long.parseLong(t.image));}
    } else if (jj_2_20(3)) {
      t = jj_consume_token(T_ID);
                 {if (true) return (ASN.TInteger)lookup(t.image, ASN.TInteger.class);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASN.TFloat Float() throws ParseException {
    Token t;
    if (jj_2_21(3)) {
      t = jj_consume_token(T_FLOAT);
                    {if (true) return new ASN.TFloat(Double.parseDouble(t.image));}
    } else if (jj_2_22(3)) {
      t = jj_consume_token(T_ID);
                 {if (true) return (ASN.TFloat)lookup(t.image, ASN.TFloat.class);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASN.Command Command() throws ParseException {
    ASN.Command command;
    if (jj_2_23(3)) {
      command = Directive();
                            {if (true) return command;}
    } else if (jj_2_24(3)) {
      command = WhileCommand();
                               {if (true) return command;}
    } else if (jj_2_25(3)) {
      command = CompoundCommand();
                                  {if (true) return command;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASN.Disjunction CompoundCommand() throws ParseException {
    ASN.Disjunction command;
    jj_consume_token(T_START);
    command = Disjunction();
    jj_consume_token(T_END);
                                                {if (true) return command;}
    throw new Error("Missing return statement in function");
  }

  static final public ASN.While WhileCommand() throws ParseException {
    ASN.Command command;
    jj_consume_token(T_WHILE);
    command = Command();
                                    {if (true) return new ASN.While(command);}
    throw new Error("Missing return statement in function");
  }

  static final public ASN.Disjunction Disjunction() throws ParseException {
    ASN.Disjunction command = new ASN.Disjunction();
    ASN.Command next;
    next = Sequence();
                        command.add(next);
    label_2:
    while (true) {
      if (jj_2_26(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(T_ELSE);
      next = Sequence();
                                      command.add(next);
    }
      {if (true) return command;}
    throw new Error("Missing return statement in function");
  }

  static final public ASN.Sequence Sequence() throws ParseException {
    ASN.Sequence command = new ASN.Sequence();
    ASN.Command next;
    label_3:
    while (true) {
      if (jj_2_27(3)) {
        ;
      } else {
        break label_3;
      }
      next = Command();
                           command.add(next);
    }
      {if (true) return command;}
    throw new Error("Missing return statement in function");
  }

/*
 */
  static final public ASN.Directive Directive() throws ParseException {
    ASN.TConstant x, y;
    ASN.TString s;
    ASN.TRegex r;
    ASN.TFormat f;
    ASN.TInteger n;
    if (jj_2_28(3)) {
      jj_consume_token(T_ABORT);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_ABORT, x);}
    } else if (jj_2_29(3)) {
      jj_consume_token(T_ABORT);
      {if (true) return new ASN.Directive(FrodoConstants.T_ABORT);}
    } else if (jj_2_30(3)) {
      jj_consume_token(T_LOG);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_LOG, x);}
    } else if (jj_2_31(3)) {
      jj_consume_token(T_FAIL);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_FAIL, x);}
    } else if (jj_2_32(3)) {
      jj_consume_token(T_FAIL);
      {if (true) return new ASN.Directive(FrodoConstants.T_FAIL);}
    } else if (jj_2_33(3)) {
      jj_consume_token(T_RESET);
      {if (true) return new ASN.Directive(FrodoConstants.T_RESET);}
    } else if (jj_2_34(3)) {
      jj_consume_token(T_EMPTY);
      {if (true) return new ASN.Directive(FrodoConstants.T_EMPTY);}
    } else if (jj_2_35(3)) {
      jj_consume_token(T_EQUALS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_EQUALS, s);}
    } else if (jj_2_36(3)) {
      jj_consume_token(T_STARTS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_STARTS, s);}
    } else if (jj_2_37(3)) {
      jj_consume_token(T_ENDS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_ENDS, s);}
    } else if (jj_2_38(3)) {
      jj_consume_token(T_CONTAINS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_CONTAINS, s);}
    } else if (jj_2_39(3)) {
      jj_consume_token(T_RANGE_RESET);
      {if (true) return new ASN.Directive(FrodoConstants.T_RANGE_RESET);}
    } else if (jj_2_40(3)) {
      jj_consume_token(T_RANGE);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_RANGE, x);}
    } else if (jj_2_41(3)) {
      jj_consume_token(T_RANGE_EMPTY);
      {if (true) return new ASN.Directive(FrodoConstants.T_RANGE_EMPTY);}
    } else if (jj_2_42(3)) {
      jj_consume_token(T_RANGE_STARTS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_RANGE_STARTS, s);}
    } else if (jj_2_43(3)) {
      jj_consume_token(T_RANGE_ENDS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_RANGE_ENDS, s);}
    } else if (jj_2_44(3)) {
      jj_consume_token(T_RANGE_CONTAINS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_RANGE_CONTAINS, s);}
    } else if (jj_2_45(3)) {
      jj_consume_token(T_RANGE_ADJUST);
      n = Integer();
      {if (true) return new ASN.Directive(FrodoConstants.T_RANGE_ADJUST, n);}
    } else if (jj_2_46(3)) {
      jj_consume_token(T_NEXT);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_NEXT, x);}
    } else if (jj_2_47(3)) {
      jj_consume_token(T_NEXT);
      {if (true) return new ASN.Directive(FrodoConstants.T_NEXT);}
    } else if (jj_2_48(3)) {
      jj_consume_token(T_NEXT_EMPTY);
      {if (true) return new ASN.Directive(FrodoConstants.T_NEXT_EMPTY);}
    } else if (jj_2_49(3)) {
      jj_consume_token(T_NEXT_STARTS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_NEXT_STARTS, s);}
    } else if (jj_2_50(3)) {
      jj_consume_token(T_NEXT_ENDS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_NEXT_ENDS, s);}
    } else if (jj_2_51(3)) {
      jj_consume_token(T_NEXT_CONTAINS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_NEXT_CONTAINS, s);}
    } else if (jj_2_52(3)) {
      jj_consume_token(T_PREV);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_PREV, x);}
    } else if (jj_2_53(3)) {
      jj_consume_token(T_PREV);
      {if (true) return new ASN.Directive(FrodoConstants.T_PREV);}
    } else if (jj_2_54(3)) {
      jj_consume_token(T_PREV_EMPTY);
      {if (true) return new ASN.Directive(FrodoConstants.T_PREV_EMPTY);}
    } else if (jj_2_55(3)) {
      jj_consume_token(T_PREV_STARTS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_PREV_STARTS, s);}
    } else if (jj_2_56(3)) {
      jj_consume_token(T_PREV_ENDS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_PREV_ENDS, s);}
    } else if (jj_2_57(3)) {
      jj_consume_token(T_PREV_CONTAINS);
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_PREV_CONTAINS, s);}
    } else if (jj_2_58(3)) {
      jj_consume_token(T_INSERT);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_INSERT, x);}
    } else if (jj_2_59(3)) {
      jj_consume_token(T_INSERT_AFTER);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_INSERT_AFTER, x);}
    } else if (jj_2_60(3)) {
      jj_consume_token(T_APPEND);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_APPEND, x);}
    } else if (jj_2_61(3)) {
      jj_consume_token(T_REMOVE);
      {if (true) return new ASN.Directive(FrodoConstants.T_REMOVE);}
    } else if (jj_2_62(3)) {
      jj_consume_token(T_REMOVE_RANGE);
      {if (true) return new ASN.Directive(FrodoConstants.T_REMOVE_RANGE);}
    } else if (jj_2_63(3)) {
      jj_consume_token(T_REPLACE);
      r = Regex();
      f = Format();
      {if (true) return new ASN.Directive(FrodoConstants.T_REPLACE, r, f);}
    } else if (jj_2_64(3)) {
      jj_consume_token(T_REPLACE);
      x = Constant();
      {if (true) return new ASN.Directive(FrodoConstants.T_REPLACE, x);}
    } else if (jj_2_65(3)) {
      jj_consume_token(T_REPLACE_ALL);
      r = Regex();
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_REPLACE_ALL, r, s);}
    } else if (jj_2_66(3)) {
      jj_consume_token(T_REPLACE_FIRST);
      r = Regex();
      s = String();
      {if (true) return new ASN.Directive(FrodoConstants.T_REPLACE_FIRST, r, s);}
    } else if (jj_2_67(3)) {
      jj_consume_token(T_CATENATE);
      {if (true) return new ASN.Directive(FrodoConstants.T_CATENATE);}
    } else if (jj_2_68(3)) {
      jj_consume_token(T_CATENATE);
      n = Integer();
      {if (true) return new ASN.Directive(FrodoConstants.T_CATENATE, n);}
    } else if (jj_2_69(3)) {
      jj_consume_token(T_MATCH);
      r = Regex();
      {if (true) return new ASN.Directive(FrodoConstants.T_MATCH, r);}
